<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <ImageView
        android:id="@+id/previousPage"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/prevButton"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:padding="10dp"
        android:tint="@color/white" />

    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="#00000000"
        android:hint="@string/paymentButton"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:textColorLink="@color/white" />

    <ImageView
        android:id="@+id/profileButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:contentDescription="@string/profileButton"
        android:layout_marginEnd="10dp"
        android:src="@drawable/profile" />
</androidx.appcompat.widget.Toolbar>