<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292a2e"
    android:orientation="vertical"
    android:weightSum="10">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/reloadHistoryToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/reloadPageToMusicPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:drawableStart="@drawable/back"
                android:gravity="start|center_vertical"

                android:padding="16dp"
                android:text="@string/musicText"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/reload"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/reloadPageToReloadHistoryPageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:drawableEnd="@drawable/history"
                android:gravity="end|center_vertical"
                android:includeFontPadding="true"
                android:padding="16dp"
                android:text="@string/reload_history"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/reloadTitle"
            android:textColor="@color/yellow"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/cardTopUpReloadNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="14"
                android:backgroundTint="@color/yellow"
                android:inputType="number"
                android:maxLength="14"
                android:hint="@string/keyIn4Digit"
                android:textAlignment="center"

                android:textColor="#fff"
                android:textColorHint="@color/message_color"
                android:textColorLink="@color/yellow"
                android:textSize="26sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/totalPinDigit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:text="0/14"
            android:textColor="@color/yellow"
            android:textSize="15sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/darker_gray" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_weight="4.75"

        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/txtOne"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"

                android:text="@string/one"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtTwo"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"

                android:text="@string/two"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtThree"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"

                android:text="@string/three"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/txtFour"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"

                android:text="@string/four"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtFive"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"

                android:text="@string/five"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtSix"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"

                android:text="@string/six"
                android:textColor="@android:color/white"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/txtSeven"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"

                android:text="@string/seven"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtEight"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"

                android:text="@string/eight"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtNine"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"

                android:text="@string/nine"
                android:textColor="@android:color/white"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/ripple_black_effect"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">


            <ImageView
                android:id="@+id/txtClear"
                android:layout_width="0dp"

                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:clickable="true"
                android:contentDescription="@string/clear_number"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"

                android:padding="10dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:tint="@color/white" />

            <TextView
                android:id="@+id/txtZero"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_black_effect"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"

                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtOk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"

                android:text="@string/ok"
                android:textColor="@color/black"
                android:textSize="24sp" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
